--- a/Flow/index.html
+++ b/Flow/index.html
@@ -199,12 +199,12 @@
                 float _q=q;
                 for(int i=0; i<NUM_WAVES; i++) {
                     vec3 lwaveNormal;
-                    vec3 lwavePos = GetGertsnerWave(vPosition, waveLength, amplitude, speed, direction, q, lwaveNormal); 
+                    vec3 lwavePos = GetGertsnerWave(vPosition, _waveLength, _amplitude, _speed, _direction, _q, lwaveNormal); 
                     wavePosition += lwavePos.xyz;
                     waveNormal -= lwaveNormal.xyz;
                     
                     _waveLength *= 1.1;
-                    _direction = normalize((2.0 * random2(direction*direction*direction) - 1.0));
+                    _direction = normalize((2.0 * random2(direction) - 1.0));
                     _amplitude *= 0.6;
                     _speed *= 1.2;
                     _q *= 1.2;
